src/snapshots/pdm__ui__tests__settings_screen_render.snap
---
source: src/ui.rs
assertion_line: 252
expression: terminal.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 24 },
        content: [
            "┌ PDM ──────────────────┐┌ Settings ───────────────────────────────────────────┐",
            "│Home                   ││Bitcoin config path                                  │",
            "│Bitcoin Config         ││(not set)                                            │",
            "│Bitcoin Status         ││P2Pool config path                                   │",
            "│P2Pool Config          ││(not set)                                            │",
            "│P2Pool Status          ││LN config path                                       │",
            "│LN Config              ││(not set)                                            │",
            "│LN Status              ││Shares Market config path                            │",
            "│Shares Market          ││(not set)                                            │",
            "│Settings               ││Bitcoin Core data directory                          │",
            "│                       ││(not set)                                            │",
            "│                       ││Bitcoin Core log file                                │",
            "│                       ││(not set)                                            │",
            "│                       ││Settings directory                                   │",
            "│                       ││/pdm/test-config                                     │",
            "│                       ││Bitcoin Core executable                              │",
            "│                       ││(not set)                                            │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "└───────────────────────┘└─────────────────────────────────────────────────────┘",
            " ↑↓  Navigate sidebar   Enter  Focus settings                                   ",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 1, fg: Gray, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 45, y: 1, fg: Reset, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 79, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 2, fg: DarkGray, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 35, y: 2, fg: Reset, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 79, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 3, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
            x: 44, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 35, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
            x: 40, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 35, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 7, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
            x: 51, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 35, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
            x: 24, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 9, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
            x: 53, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 35, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 11, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
            x: 47, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 35, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 13, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
            x: 44, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 42, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 15, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
            x: 49, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 35, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 79, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 25, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 23, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 4, y: 23, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 23, y: 23, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 30, y: 23, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 47, y: 23, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
